added extensions method to IServiceCollection to make Startup class cleaner,added authorize attribute to get requests,

--- a/.gitignore
+++ b/.gitignore
@@ -452,3 +452,4 @@ $RECYCLE.BIN/
 !.vscode/launch.json
 !.vscode/extensions.json
 DatingApp/DatingApp/datingapp.db-wal
+DatingApp/DatingApp/datingapp.db-shm
