refactored frontend files, added feature to stay logged in after refreshing the page

--- a/.gitignore
+++ b/.gitignore
@@ -453,3 +453,4 @@ $RECYCLE.BIN/
 !.vscode/extensions.json
 DatingApp/DatingApp/datingapp.db-wal
 DatingApp/DatingApp/datingapp.db-shm
+DatingApp/DatingApp/datingapp.db
